--- a/css/style.css
+++ b/css/style.css
@@ -2,17 +2,25 @@ body{
 	color: white;
 }
 
+.home_nav{
+	position: absolute;
+}
 .first_page{
-	background: black;
-	min-height: 527px;
+	/*background: black;*/
+	/*min-height: 527px;*/
 	font-size: 14px;
+	padding:0;
 }
 img.frst_page_logo{
-	position: relative;
-	top: -3em;
+	    position: absolute;
+    /* top: -3em; */
+    left: 46%;
+    top: 2%;
 }
 img.frst_page_play{
-	padding-top: 6em;
+	    position: absolute;
+    top: 43.4%;
+    left: 47.5%;
 }
 
 p.second_page_head
@@ -36,6 +44,45 @@ a{
 	background:white;
 	color: white;
 }
+
+/*#overlay{
+ position:absolute;
+top:0;
+    width:100%;
+    min-height:570px;
+    background-color:rgba(4, 4, 4, 0.17);
+    z-index:300000;
+}*/
+
+/*#player:hover > #overlay {
+    opacity: 1;
+    width: 100%;
+    display: block;
+  
+    background: rgba(42, 41, 39, 0.44);
+}*/
+
+
+/*.content {
+  position: relative;
+  width: 100%;
+  margin: 0 auto;
+}
+.content video {
+  width: 100%;
+  margin: 20px;
+}
+.content:before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  padding-right: 40px;
+  background: rgba(0, 0, 0, 0.5);
+  border-radius: 5px;
+}*/
+
+
 /*------------------------------second page-------------------------*/
 
 .second_page{
@@ -132,10 +179,12 @@ p.eighth_page_head{
 }
 
 .eighth_page_box{
-	border:1px solid black;
+	border:1px solid #efefef;
 	min-height: 614px;
 	margin-top: 2em;
-	background-i
+	background: #efefef;
+	border-bottom-color: transparent;
+	padding:0;
 }
 
 p.images_margin{
@@ -147,9 +196,86 @@ p.subscription_price{
 	font-size: 18px;
 	color: #636363;
 	margin-top: 2em;
+	margin-bottom: 1.5em;
+
+}
+.product_chchkbox2{
+	margin-top: 3em;
+}
+
+span.input_chckbox_3{
+	    position: relative;
+    top: 2.5em;
+}
+
+.product_chchkbox4{
+	margin-top: 3em;
+	margin-bottom: 3em;
+}
+p.subscription_srvr{
+	font-size: 14px;
+	color: #636363;
+}
+
+span.subscription_smal_box{
+border: 1px solid #d4caca;
+    color: #575757;
+    padding: 2px 7px;
+    background-color: white;
+}
+p.subscription_smal_box_cont{
+	 color: #575757;
+	 font-size: 14px;
+}
+
+.subscription_button_main{
+	height: 49px;
+	border: 1px solid #22aae2;
+	background-color: #22aae2;
+	color: white;
+}
+.eighth_page_box_frst_para{
+	margin-left: 1.5em;
+}
+.eighth_page_box_frst_para_inner{
+	    margin-left: -.8em;
+}
+.homepage_innr_in{
+	font-size: 12px;
+	color: #393939;
+}
+p.subscribe_button_content{
+	font-size: 30px;
+	cursor: pointer;
 
 }
 
+img.images33_m{
+	    position: relative;
+    top: -8px;
+}
+
+.scnd_pag_img_ma{
+	margin-top: -2em;
+}
+
+.scnd_pag_img_ma_1{
+	margin-top: -1em;
+}
+
+input[type="text"]{
+text-indent: 12px;
+color: black;
+outline: none;
+font-family: tbold;
+}
+
+ input[type="number"]{
+ 	text-indent: 4px;
+ 	color: black;
+outline: none;
+font-family: tbold;
+ }
 /*--------------------------------contact page-------------------------*/
 
 .contact_page{
@@ -193,4 +319,67 @@ span.contact_inner3{
 
 .technical_spc{
 	margin-bottom: 1em;
+}
+
+/*------------------------checkbox--------------------------*/
+
+
+input[type="checkbox"] {
+    display: none;
+}
+
+input[type="checkbox"] + label {
+    color: #9b9b9b;
+    font-family: Arial, sans-serif;
+    font-size: 12px;
+}
+
+input[type="checkbox"] + label span {
+    display: inline-block;
+    width: 14px;
+    height: 14px;
+    margin: -1px 4px 0 0;
+    vertical-align: middle;
+    cursor: pointer;
+    -moz-border-radius: 50%;
+    border-radius: 7%;
+}
+
+input[type="checkbox"] + label span {
+    background-color: white;
+    border: 1px solid #bdbdbd;
+    position: relative;
+    left: -1em;
+}
+
+input[type="checkbox"]:checked + label span {
+    background-color: #22aae2;
+    border-color: transparent;
+}
+
+input[type="checkbox"] + label span,
+input[type="checkbox"]:checked + label span {
+    -webkit-transition: background-color 0.4s linear;
+    -o-transition: background-color 0.4s linear;
+    -moz-transition: background-color 0.4s linear;
+    transition: background-color 0.4s linear;
+}
+
+
+
+
+
+@media only screen and (max-width: 350px) {
+p.contact_page_numbr{
+	font-size: 20px;
+}
+
+p.subscribe_button_content{
+font-size: 18px;
+padding-top: 11px;
+}
+
+
+
+
 }
